Stub of banOrUnbanUser
